# yarpscope-next

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: App.h  DataVisualizer.h  PlotWindow.h  YarpReader.h
src/: App.cpp  DataVisualizer.cpp  PlotWindow.cpp  main.cpp
